[gd_scene load_steps=3 format=3 uid="uid://duj4gsap5y34k"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_cpoei"]
[ext_resource type="Theme" uid="uid://cfmbgaapgrf6l" path="res://GameUITheme.tres" id="2_ji0e0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_cpoei")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_ji0e0")

[node name="Timer" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "00:00"

[node name="Minimap" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.75
anchor_right = 0.99
anchor_bottom = 0.98
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Minimap"]
layout_mode = 2
mouse_filter = 2

[node name="Map" type="ColorRect" parent="Control/Minimap/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="WeaponBar" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.03
anchor_top = 0.83
anchor_right = 0.3
anchor_bottom = 0.96
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/WeaponBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mana" type="TextureRect" parent="Control/WeaponBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.45
anchor_bottom = 1.0

[node name="ManaText" type="Label" parent="Control/WeaponBar/Mana"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Weapons" type="TextureRect" parent="Control/WeaponBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Weapon1" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.16
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Weapon2" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16
anchor_right = 0.32
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Weapon3" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_right = 0.48
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Weapon4" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_right = 0.64
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Weapon5" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.64
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "5"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Weapon6" type="TextureRect" parent="Control/WeaponBar/Weapons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/WeaponBar/Weapons/Weapon6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "6"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Traps" type="TextureRect" parent="Control/WeaponBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_right = 0.85
anchor_bottom = 0.5

[node name="Trap1" type="TextureRect" parent="Control/WeaponBar/Traps"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.34
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/WeaponBar/Traps/Trap1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Z"

[node name="Trap2" type="TextureRect" parent="Control/WeaponBar/Traps"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34
anchor_right = 0.67
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/WeaponBar/Traps/Trap2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "X"

[node name="Trap3" type="TextureRect" parent="Control/WeaponBar/Traps"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/WeaponBar/Traps/Trap3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "C"
